corrected spelling mistakes in readme and testing docs and fixed delete icon padding for 320px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -592,6 +592,8 @@ html, body {
     .inputlist {
     font-size: medium;
     }
+}
+@media (max-width: 320px) {
     .delete {
         margin-left: 10px;
         padding: 2px;
