fixed bugsfound in place order form and in addItem, sendMail js files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -582,7 +582,9 @@ html, body {
 #groceryList {
     height: auto;
 }
-
+.hideList {
+    opacity: 0;
+}
 /*----------media queries for place order---------*/
 
 @media (max-width: 280px) {
