--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -542,7 +542,7 @@ html, body {
     margin: 50px 10px;
     padding: 10px;
     background-color: #fae1c9 ;
-    width: 100%;
+    width: auto;
 }
 
 .form-btn {
@@ -614,7 +614,7 @@ html, body {
         font-size: 14px;
     }
 }
-@media (min-width:540px) {
+@media (min-width:512px) {
     #place_order {
     margin: 50px;
     }
@@ -736,6 +736,7 @@ html, body {
     }
     #acknowledgement h3 {
         font-size: 35px;
+        padding: 0 70px;
     }
 }
 @media (min-width: 1200px) {
@@ -809,12 +810,12 @@ background-color: #212529;
 }
 @media (min-width: 411px) {
     .footer-ul {
-        margin-left: 60px;
+        margin-left: 40px;
     }
 }
 @media (min-width: 414px) {
     .footer-ul {
-        margin-left: 75px;
+        margin-left: 50px;
     }
 }
 @media (min-width: 540px) {
@@ -871,9 +872,16 @@ background-color: #212529;
     }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1280px) {
     .footer-ul {
-        margin-left: 100px;
+        margin-left: 70px;
+        padding-left: 70px;
+        font-size: 18px;
+    }
+}
+@media (min-width: 1290px) {
+    .footer-ul {
+        margin-left: 120px;
         padding-left: 70px;
         font-size: 18px;
     }
