--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,10 +250,7 @@ html, body {
     background-repeat: no-repeat;
     background-position-x: center;
     background-position-y: center;
-    height: auto;
-    /*padding: 0;
-    margin: 0;
-    border: 0;*/  
+    height: auto; 
 }
 #schedule-header {
     text-align: center;
@@ -400,7 +397,6 @@ html, body {
     #schedule-rtable {
         display: none;
     }
-    
 }
 @media (min-width: 768px) {
     .schedule-heading {
@@ -595,6 +591,7 @@ html, body {
     }
     .inputlist {
         font-size: medium;
+        width: fit-content;
     }
     .address-control {
         font-size: 12px!important;
